# ChessMachineZero

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: change_history.md  chess_machine_zero_percepta_architecture.md  cmz_percepta_policy_only_architecture_review.md  cutlass_acceleration_plan.md  native_rust_cpp_cuda_architecture.md  percepta_can_llms_be_computers.md  percepta_policy_only_full_code_audit_2026-05-28.md  project_memory.md  prompt_history.md
native/: Cargo.toml
native/cpp/: CMakeLists.txt
native/cpp/include/: cmz_engine.h
native/cpp/src/: cmz_cuda_kernels.cu  cmz_engine.cpp
test_results/: analytic_full_rules_v2_pytest_2026-05-24.md  analytic_rules_compilation_v1_pytest_2026-05-24.md  candidate_pawn_push_condition_pytest_werror_2026-05-28.txt  dashboard_docker_container_2026-05-26.md  dashboard_docker_publish_pytest_2026-05-26.txt  dashboard_no_ply_cap_2026-05-26.md  dashboard_rule_verification_v1_2026-05-24.md  dashboard_scroll_lock_2026-05-26.md  dashboard_side_logs_pytest_2026-05-26.txt  docker_cprofile_incremental_decode_2026-05-26.txt  docker_cprofile_selfplay_step_2026-05-25.txt  docker_perf_incremental_decode_2026-05-26.txt  github_public_publish_v1_2026-05-25.md  legacy_strategy_modules_pytest_2026-05-28.txt  legacy_strategy_modules_targeted_pytest_2026-05-28.txt  milestone1_pytest_2026-05-24.md  milestone2_pytest_2026-05-24.md  milestone3_pytest_2026-05-24.md  milestone4_pytest_2026-05-24.md  milestone5_pytest_2026-05-24.md  milestone6_pytest_2026-05-24.md  multi_position_hosted_vm_pytest_2026-05-24.md  native_attack_mask_lowering_v1_2026-05-27.md  native_candidate_generation_qk_v1_2026-05-28.md  native_candidate_offset_explicit_slots_v1_2026-05-28.md  native_candidate_pawn_capture_ep_condition_v1_2026-05-28.md  (+87 more)
(+555 files in other folders)
